--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -1,5 +1,5 @@
-<div class="panel position-absolute top-0 start-0 w-100 pt-3 ps-lg-30 pe-lg-40 mb-3">
-  <div class="d-flex align-items-center justify-content-between me-lg-10">
+<div class="panel position-absolute top-0 start-0 w-100 ps-lg-30 pe-lg-40 mb-3">
+  <div class="d-flex align-items-center justify-content-between me-lg-10 h-100">
     <a class="btn btn-primary btn-sm d-lg-none ms-0 me-3 " data-bs-toggle="offcanvas" href="#offcanvasMenu" role="button" aria-controls="offcanvasMenu">
       <svg class="icon icon-menu text-white">
         <use xlink:href="#icon-menu"></use>
@@ -13,10 +13,11 @@
         <use xlink:href="#icon-email"></use>
       </svg>
     </a>
-    <a href="#" class="text-reset text-decoration-none d-inline-flex align-items-center">
+    <a href="#" class="text-reset text-decoration-none d-inline-flex align-items-center position-relative">
       <svg class="icon icon-alarm">
         <use xlink:href="#icon-alarm"></use>
       </svg>
+      <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning ms-0">12</span>
     </a>
     <a href="#" class="text-reset text-decoration-none d-inline-flex align-items-center">
       <svg class="icon icon-logout">
